[package]
name = "rust_udp_multicast_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
socket2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hostname = "0.4.1"
local-ip-address = "0.6.5"
once_cell = "1.17.1"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
